# portablebrains

./: BATCHED_FASTEMBED_IMPLEMENTATION.md  CUSTOM_ENDPOINTS.md  Cargo.toml  DUCKDB_MIGRATION.md  EATMYBRAIN.md  MEMORY_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  README.md  SENTENCE_CHUNKING_IMPLEMENTATION.md  TWO_PHASE_OPTIMIZATION.md
src/: database.rs  document_processor.rs  duckdb_storage.rs  eatmybrain.rs  embedding_manager.rs  error.rs  lancedb_storage.rs  lib.rs  main.rs  storage.rs
