[package]
name = "portable-brains"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
duckdb = { version = "1.0", features = ["bundled"] }
# LanceDB for vector database backend option (commented out for now due to compilation issues)
# lancedb = { version = "0.14.1", default-features = false, features = ["remote"] }
# arrow-array = "53.0"
# arrow-schema = "53.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# FastEmbed with ONNX Runtime configured for Metal/CoreML acceleration  
fastembed = "5.2.0"
# Enable CoreML execution provider for Apple Silicon acceleration
ort = { version = "2.0.0-rc.10", features = ["coreml"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lopdf = "0.32"
regex = "1.0"
log = "0.4"
env_logger = "0.11"
# Document format support
html5ever = "0.27"  # HTML parsing
scraper = "0.19"    # HTML element extraction
zip = "0.6"         # For Office document formats (docx, pptx, xlsx)
quick-xml = "0.31"  # XML parsing for Office formats
calamine = "0.22"   # Excel file reading

[[bin]]
name = "portable-brains"
path = "src/main.rs"
